# Wedding_Quest

./: .env.example  CLAUDE.md  Cargo.toml  README.md  docker-compose.yml
frontend/: .gitignore  angular.json  package.json
frontend/src/: index.html  styles.css
frontend/src/app/: app.routes.ts
frontend/src/app/admin/: admin.routes.ts
frontend/src/app/admin/create-session/: create-session.component.html  create-session.component.ts
frontend/src/app/admin/game-control/: game-control.component.html  game-control.component.ts
frontend/src/app/admin/session-detail/: session-detail.component.html  session-detail.component.ts
frontend/src/app/display/: display.routes.ts
frontend/src/app/display/leaderboard-display/: leaderboard-display.component.html  leaderboard-display.component.ts
frontend/src/app/guest/: guest.routes.ts
frontend/src/app/guest/game/: game.component.html  game.component.ts
frontend/src/app/guest/join/: join.component.html  join.component.ts
frontend/src/app/models/: question.model.ts  score.model.ts  session.model.ts
frontend/src/app/services/: game.service.ts  question.service.ts  score.service.ts  session.service.ts  websocket.service.ts
services/engine-service/: Cargo.toml
services/engine-service/database/migrations/: 001_engine_tables.sql
services/engine-service/src/: config.rs  errors.rs  main.rs
services/engine-service/src/api/: routes.rs
services/engine-service/src/api/dto/: game_dto.rs
services/engine-service/src/api/handlers/: game_handlers.rs
services/engine-service/src/application/commands/: close_round.rs  couple_answer.rs  mod.rs  next_question.rs  start_game.rs  submit_answer.rs
services/engine-service/src/domain/game/: entity.rs  events.rs  mod.rs
services/engine-service/src/infrastructure/: mod.rs  session_client.rs
services/engine-service/src/infrastructure/persistence/: game_round_repository.rs  game_state_repository.rs  (+1 more)
services/realtime-service/: .env.example  Cargo.toml
services/realtime-service/src/: config.rs  main.rs
services/realtime-service/src/api/: routes.rs  ws_handler.rs
services/realtime-service/src/domain/room/: events.rs
services/realtime-service/src/infrastructure/: mod.rs  redis_subscriber.rs
services/scoring-service/: Cargo.toml
services/scoring-service/database/migrations/: 001_scoring_tables.sql  002_lucky_boost.sql
services/scoring-service/src/: config.rs  errors.rs  main.rs
services/scoring-service/src/api/: routes.rs
services/scoring-service/src/api/dto/: mod.rs  score_dto.rs
services/scoring-service/src/api/handlers/: mod.rs  score_handlers.rs
services/scoring-service/src/application/: score_calculator.rs
services/scoring-service/src/domain/scoring/: entity.rs
services/scoring-service/src/infrastructure/: engine_client.rs  event_listener.rs  mod.rs  session_client.rs
services/scoring-service/src/infrastructure/persistence/: mod.rs  score_repository.rs
services/scoring-service/src/infrastructure/persistence/models/: mod.rs  player_score.rs  round_score.rs
services/session-service/: .env.example  Cargo.toml
services/session-service/database/migrations/: 001_create_tables.sql  002_questions.sql
services/session-service/src/: config.rs  errors.rs  main.rs
services/session-service/src/api/: routes.rs
services/session-service/src/api/dto/: mod.rs  player_dto.rs  question_dto.rs  session_dto.rs
services/session-service/src/api/handlers/: mod.rs  player_handlers.rs  question_handlers.rs  session_handlers.rs
services/session-service/src/application/commands/: create_session.rs  join_session.rs  mod.rs  start_session.rs
services/session-service/src/application/queries/: get_lobby.rs  get_session.rs  mod.rs
services/session-service/src/domain/game_session/: entity.rs  events.rs  mod.rs  repository.rs  value_objects.rs
services/session-service/src/domain/player/: entity.rs  events.rs  repository.rs  value_objects.rs
services/session-service/src/domain/question/: entity.rs  repository.rs  value_objects.rs
services/session-service/src/domain/score_config/: entity.rs
services/session-service/src/infrastructure/: mod.rs
services/session-service/src/infrastructure/messaging/: mod.rs  redis_publisher.rs
services/session-service/src/infrastructure/persistence/: game_session_repository.rs  mod.rs  player_repository.rs  question_repository.rs  score_config_repository.rs
services/session-service/src/infrastructure/persistence/models/: game_session.rs  mod.rs  player.rs  question.rs  score_config.rs
(+4 files in other folders)
