[workspace]
resolver = "2"
members = [
    "services/session-service",
    "services/realtime-service",
]

[workspace.dependencies]
# RustForge framework crates
rf-core      = { git = "https://github.com/Chregu12/RustForge" }
rf-web       = { git = "https://github.com/Chregu12/RustForge" }
rf-orm       = { git = "https://github.com/Chregu12/RustForge" }
rf-config    = { git = "https://github.com/Chregu12/RustForge" }
rf-cache     = { git = "https://github.com/Chregu12/RustForge" }
rf-broadcast = { git = "https://github.com/Chregu12/RustForge" }

# Standard dependencies (transitive through rf-* but explicitly listed for clarity)
tokio        = { version = "1", features = ["full"] }
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
uuid         = { version = "1", features = ["v4", "serde"] }
chrono       = { version = "0.4", features = ["serde"] }
anyhow       = "1"
dotenvy      = "0.15"
tracing      = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand         = "0.8"
async-trait  = "0.1"
dashmap      = "5"
futures-util = "0.3"

# redis wird transitiv über rf-cache (redis-backend feature) eingebunden.
# Direktes Hinzufügen nur wenn Low-Level-Zugriff außerhalb von rf-cache benötigt wird.
redis = { version = "0.24", features = ["tokio-comp", "connection-manager", "aio"] }

# sea-orm direkt für Entity-/Model-Definitionen (Derive-Macros brauchen den Crate-Namen `sea_orm`).
# rf-orm nutzt ebenfalls sea-orm 1.1 — Cargo dedupliziert beide zur selben Version.
sea-orm = { version = "1.1", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
    "with-uuid",
    "with-chrono",
] }
